<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/paddingSelection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/fragSelectMarginTop"
    tools:context=".SelectionFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/ivRoverHeight"
        android:src="@drawable/rover"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:textSize="@dimen/fragSelectTxtSize"
            android:layout_marginTop="@dimen/solMarginTop"
            android:layout_marginEnd="20dp"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="@string/sol"
            android:gravity="end"/>

        <EditText
            android:id="@+id/sol"
            android:textSize="@dimen/fragSelectTxtSize"
            android:inputType="number"
            android:hint="@string/solHintRange"
            android:layout_marginTop="@dimen/solMarginTop"
            android:layout_width="150dp"
            android:layout_height="50dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_marginTop="50dp"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:hint="@string/rover">
            <AutoCompleteTextView
                android:id="@+id/autoCompleteTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="true"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnGo"
        android:layout_marginTop="@dimen/solMarginTop"
        android:layout_marginHorizontal="@dimen/solMarginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go"/>

</LinearLayout>